# diary-telegram-bot

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  config.example.toml  docker-compose.yml  flake.nix  implementation_plan.md  pyproject.toml
project-documentation/: architecture.md  architecture_discussion.md  architecture_discussion_r3.md  architecture_discussion_r4.md  architecture_discussion_r5.md  architecture_discussion_r6.md  architecture_final.md  architecture_review.md  implementation_plan.md
src/vlog_journal/: cli.py  config.py  logging.py
src/vlog_journal/bot/: app.py  handlers.py  middleware.py  review.py  state.py
src/vlog_journal/enrichment/: __init__.py  gps.py  stats.py  weather.py
src/vlog_journal/pipeline/: registry.py  runner.py
src/vlog_journal/processors/: diarizer.py  llm.py  media.py  schemas.py  transcriber.py
src/vlog_journal/vault/: __init__.py  backup.py  renderer.py  storage.py  tags.py
support_scripts/: nix.custom.conf  revert_wsl.sh  robust_download.py  setup_wsl.sh  sync_retry.sh
templates/: vlog_note.md.j2  voice_note.md.j2
tests/: test_backup.py  test_bot.py  test_commands.py  test_config.py  test_enrichment.py  test_integration.py  test_llm.py  test_media.py  test_pipeline.py  test_review.py  test_state.py  test_transcriber.py  test_vault.py
