[project]
name = "vlog-journal"
version = "0.1.0"
description = "Automated video/voice diary pipeline with local transcription, speaker diarization, and Obsidian sync"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyTelegramBotAPI>=4.20.0",
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "litellm>=1.35.0",
    "aiofiles>=23.2.1",
    "torch>=2.2.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "structlog>=24.1.0",
    "reverse_geocoder>=1.5.1",
    "httpx>=0.27.0",
    "py7zr>=0.22.0",
]

[project.scripts]
vlog-journal = "vlog_journal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
